--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@lexical/html": "^0.35.0",
+    "@lexical/link": "^0.35.0",
+    "@lexical/list": "^0.35.0",
+    "@lexical/react": "^0.35.0",
+    "@lexical/rich-text": "^0.35.0",
     "@reduxjs/toolkit": "^2.9.0",
     "@supabase/supabase-js": "^2.45.4",
+    "@tiptap/extension-heading": "^3.4.2",
+    "@tiptap/extension-link": "^3.4.2",
+    "@tiptap/extension-placeholder": "^3.4.2",
+    "@tiptap/extension-text-align": "^3.4.2",
+    "@tiptap/extension-underline": "^3.4.2",
+    "@tiptap/react": "^3.4.2",
+    "@tiptap/starter-kit": "^3.4.2",
     "framer-motion": "^11.3.31",
+    "lexical": "^0.35.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "recharts": "^2.12.7",
     "xlsx": "^0.18.5"
